<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avalanche.hello.helloavalanche.Plan">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/mission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textAlignment="center" />

        <TextView
            android:text="@string/mission_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:paddingBottom="30dp"/>

        <TextView
            android:text="@string/vision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textAlignment="center" />

        <TextView
            android:text="@string/vision_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            android:paddingBottom="30dp"/>

        <TextView
            android:text="@string/business_proc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textAlignment="center" />

        <TextView
            android:text="@string/business_proc_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:paddingLeft="30dp"
            android:paddingBottom="30dp"/>
    </LinearLayout>
</FrameLayout>
