<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avalanche.hello.helloavalanche.People">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:text="@string/people_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:text="@string/boss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="match_parent"
                    app:srcCompat="@mipmap/tris"
                    android:layout_height="200dp" />

                <TextView
                    android:text="@string/boss_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textAlignment="center"
                    android:paddingBottom="30dp" />

                <TextView
                    android:text="@string/ej"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@mipmap/ej"
                    android:layout_weight="0.50" />

                <TextView
                    android:text="@string/ej_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textAlignment="center"
                    android:paddingBottom="30dp" />

                <TextView
                    android:text="@string/jerome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@mipmap/jer"
                    android:layout_weight="0.50" />

                <TextView
                    android:text="@string/jerome_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textAlignment="center"
                    android:paddingBottom="30dp" />

                <TextView
                    android:text="@string/sam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@mipmap/sam"
                    android:layout_weight="0.50" />

                <TextView
                    android:text="@string/sam_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textAlignment="center"
                    android:paddingBottom="30dp" />

                <TextView
                    android:text="@string/jd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@mipmap/jd"
                    android:layout_weight="0.50" />

                <TextView
                    android:text="@string/jd_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textAlignment="center"
                    android:paddingBottom="30dp" />

                <TextView
                    android:text="@string/marx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@mipmap/marx"
                    android:layout_weight="0.50" />

                <TextView
                    android:text="@string/marx_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textAlignment="center"
                    android:paddingBottom="30dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
